--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 
 <head>
-  <title>Site da Escola</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Site da Escola</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" text="text/css" href="css/style.css">
 
 </head>
 
@@ -21,44 +21,98 @@
 
     <nav class="navbar-inverse nav">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle"data-toggle="collapse" data-target="#mymmenu">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mymmenu">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-                <span class="icon-bar"></span>                
+                <span class="icon-bar"></span>
             </button>
             <div class="collapse navbar-collapse" id="#mymenu">
                 <ul class="nav navbar-nav">
-                    <li class="links"><a href="#nome">Nome da Escola</a></li>
-                    <li class="links"><a href="#videos">Vida no campus</a></li>
-                    <li class="links"><a href="#con">Conquistas</a></li>
-                    <li class="links"><a href="#novo">O que há de novo</a></li>
-                    <li class="links"><a href="#cono">Fale conosco</a></li>
-                    </ul>
+                    <li class="links"><a href="#NomeDaEscola">Nome da Escola</a></li>
+                    <li class="links"><a href="#VidaNoCampus">Vida no Campus</a></li>
+                    <li class="links"><a href="#Conquistas">Conquistas</a></li>
+                    <li class="links"><a href="#OQueHaDeNovo">O que há de novo</a></li>
+                    <li class="links"><a href="#FaleConosco">Fale Conosco</a></li>
+                </ul>
             </div>
         </div>
-       </nav>
+    </nav>
 
-    <section id="nome">
+    <iframe id="video" width="1904" height="743" src="https://www.youtube.com/embed/21-2-4nckCk"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
 
-    </section>
-
-    <section id="videos">
-
-    </section>
-
-    <section id="con">
+    <section id="NomeDaEscola">
 
     </section>
 
-    <section  id="novo">
-
+    <section id="VidaNoCampus">
+        <center>
+            <br><br>
+            <div class="travel_mainDiv">
+                <h5 class="text-capitalize">Vida no Campus</h5>
+            </div><br>
+            <center>
+                <div class="travel_mainDiv">
+                    <img src="imagens\vidanocampus\CantinaDaEscola.jpeg">
+                    <h4 class="text-capitalize"><kbd>Cantina da Escola</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-capitalize">Nossa cantina é pequena mas tem qualidade.</h5>
+                    <p class="text-muted">A cantina é muito antiga, está ai desde quando a escola foi construida.</p>
+                </div>
+            </center>
+            <br><br><br><br>
+            <center>
+                <div class="travel_mainDiv">
+                    <img src="imagens\vidanocampus\SalaDaEscola.jpg">
+                    <h4 class="text-capitalize"><kbd>Sala da Escola</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-capitalize">Nossa sala de aula é muito confortavel.</h5>
+                    <p class="text-muted">As aulas tem ar condicionado e várias cadeiras e mesas</p>
+                </div>
+            </center>
+            <br><br><br><br>
+            <center>
+                <div class="travel_mainDiv">
+                    <img src="imagens\vidanocampus\BibliotecaDaEscola.jpeg">
+                    <h4 class="text-capitalize"><kbd>Bilioteca da Escola</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-capitalize">Nossa biblioteca tem muitos livros valiosos.</h5>
+                    <p class="text-muted">A bilioteca tem certa de 40 mil livros.</p>
+                </div>
+            </center>
+            <br><br><br><br>
+        </center>
     </section>
 
-    <section id="cono">
-
+    <section id="Conquistas">
+        
     </section>
 
-    <iframe id="video" width="1904" height="743" src="https://www.youtube.com/embed/21-2-4nckCk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <section id="OQueHaDeNovo">
+        
+    </section>
+
+    <section id="FaleConosco">
+        <center>
+            <br><br>
+            <div class="travel_mainDiv">
+                <h5 class="text-capitalize">Fale Conosco</h5>
+            </div><br>            
+            <center>
+                <div class="travel_mainDiv">
+                    <h4 class="text-capitalize"><kbd>Dados de Contato</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-capitalize">Entre em contato no telefone ou no email:</h5>
+                    <p class="text-muted">(21)9999-9999 ou contato@contato.com</p>
+                </div>
+            </center>            
+            <br><br><br><br>
+        </center>
+    </section>
+    </section>
+
 </body>
 
 </html>
